Bug 132338 - Font name dropdown in toolbar is narrow
Summary: Font name dropdown in toolbar is narrow
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-04-23 02:58 UTC by Aron Budea
Modified: 2020-05-14 05:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison screenshot (191.14 KB, image/png)
2020-04-23 02:58 UTC, Aron Budea
Details
after the above change (48.41 KB, image/png)
2020-04-23 12:26 UTC, Caolán McNamara
Details
Comparison screenshot (169.96 KB, image/png)
2020-04-27 02:15 UTC, Aron Budea
Details
Screenshot with patch (108.40 KB, image/png)
2020-04-29 13:41 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2020-04-23 02:58:35 UTC
Created attachment 159831 [details]
Comparison screenshot

- Open Writer or Calc.

=> Note how the font name dropdown in the toolbar is narrower than usual.

Attaching screenshot comparing latest bibisect build to 6.3.5.2 in Linux.
Note how the the font effect buttons in the sidebar aren't spaced properly, either, though that looks fine in a current Windows build (151d95376a13907553032efc271fb0a7a27c9782 vs Linux bibisect repo's 850b8de31c5be5127eac16a4f5cc18c26a582e53), not sure if the bug is Linux-specific, or it's been fixed since.

This is a regression that started with the following commit, bibisected using repo bibisect-linux-64-6.5. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=850b8de31c5be5127eac16a4f5cc18c26a582e53
author		Caolán McNamara <caolanm@redhat.com>	2020-04-19 20:36:17 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-21 11:52:58 +0200

weld sidebar text panel
Comment 1 Caolán McNamara 2020-04-23 08:10:42 UTC
the combobox is 1 char narrower since that commit
Comment 2 Commit Notification 2020-04-23 11:45:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/259fedf599e9c1ec9b007c30b44d2dc07eaca98e

Resolves: tdf#132338 combobox 1 character narrower than it used to be

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2020-04-23 12:26:53 UTC
Created attachment 159844 [details]
after the above change

6.4.4 vs master screenshot
Comment 4 Caolán McNamara 2020-04-23 12:30:04 UTC
the width is now back to what it was before that change.

wrt the font effect buttons, that's now a native gtk toolbar and the spacing there is whatever a real gtk toolbar uses, as is the "big" dropdown arrows
Comment 5 Aron Budea 2020-04-27 02:15:58 UTC
Created attachment 159980 [details]
Comparison screenshot

(In reply to Caolán McNamara from comment #4)
> the width is now back to what it was before that change.
Thanks for the fix, however I can still see discrepancy in width between right before the welding and the current commit, please see the screenshot (c5769df7ecbc11c09ee5f2007d24cbd01ac33a52 vs 60fcd4427231e8c48cd3bf8307e280fd3a13a84f).

> wrt the font effect buttons, that's now a native gtk toolbar and the spacing
> there is whatever a real gtk toolbar uses, as is the "big" dropdown arrows
Is there nothing that could be done about these? It's so much space wasted.
Happy to track this in a different ticket, btw.
Comment 6 Caolán McNamara 2020-04-27 07:45:23 UTC
are we into "so what" territory wrt widths, what makes one set of widths sacred ?
Comment 7 Aron Budea 2020-04-27 13:11:49 UTC
It seemed like an unexpected side-effect of a change that I thought was worth pointing out. I also wonder what makes more text fit in your case than in mine ("Liberation Ser" vs. "Liberation S").

The reason why I particularly noticed this is that font names tend to be longer, so when the font picker gets even shorter than what it used to be (which already wasn't long), it's apparent.
Comment 8 Caolán McNamara 2020-04-29 08:41:11 UTC
re comment #7 and the width, what is your interface font, is it Ubuntu ? The issue might be that the font has unusually narrow digit width vs typical latin char width
Comment 9 Aron Budea 2020-04-29 13:41:09 UTC
Created attachment 160077 [details]
Screenshot with patch

(In reply to Caolán McNamara from comment #8)
> re comment #7 and the width, what is your interface font, is it Ubuntu ?
Yes, Ubuntu Regular size 11.

https://gerrit.libreoffice.org/c/core/+/93151
With the patch the width is almost exactly the same as before the weld changes, thank you!
Comment 10 Commit Notification 2020-04-29 20:11:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15652c6cdfe62486d9f0e5f76de624c631f5cc24

tdf#132338 better match the original width of the font name combobox

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Aron Budea 2020-04-30 00:13:25 UTC
The dropdown width is much better now as well, thanks for that!

I could imagine a bit less padding for the normal toolbar buttons as well, but not sure if there are further reasonable options, and I wouldn't want to push your patience. ;)

Two smaller details worth noting:
- there's a pixel distance between adjacent buttons that wasn't there before (adds a bit more to the perception of distance),
- dropdowns for dropdown toolbar buttons open starting under the arrow, not under the actual button. (probably comes from the GTK3 way?)
Comment 12 Caolán McNamara 2020-04-30 20:26:16 UTC
"padding [and] there's a pixel distance between adjacent buttons that wasn't there before (adds a bit more to the perception of distance)" that's from the genuine native gtk theming so not under our control. Its sometimes possible to hack these things like the narrow buttons, but each one is inherently risky.

"dropdowns for dropdown toolbar buttons open starting under the arrow, not under the actual button. (probably comes from the GTK3 way?)" the ideal case is under wayland, there we have the default GtkPopover and it looks real neat. Under X, cause popovers can't escape their parent window, we're using a replacement popup window which can. So the placement of that can be adjusted on our side, and doing so minimizes the other X-only bug 132540 so I'll try that out to see how it looks.
Comment 13 Commit Notification 2020-05-01 07:30:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b44e585c9e9fb949cea5cda9fc19cdb27edbf65

tdf#132540 and tdf#132338 align popover replacement with complete toolitem

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 BogdanB 2020-05-14 05:21:15 UTC
It's ok in
Version: 7.0.0.0.alpha1+
Build ID: 47c81498c63ae71a351f43ec2f073ba92d99fc1d
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-13_06:53:25
Calc: threaded