Resolves: tdf#132338 combobox 1 character narrower than it used to be

Change-Id: I9b24c654a9d209c5d52eebf852b6dca436a782b3